--- a/ppmtool-react-client/package.json
+++ b/ppmtool-react-client/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^4.4.1",
     "bootstrapper": "^0.1.3",
     "classnames": "^2.2.6",
+    "jwt-decode": "^2.2.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
